--- a/sbs-spring-mybatis/src/main/resources/database.properties
+++ b/sbs-spring-mybatis/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 ### public  database  ###
-jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/sample?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=mysql
